# anjor

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agentscope.db-shm  agentscope.db-wal  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.internal/: PROGRESS.md  vision.txt
agentscope/: __init__.py
agentscope/analysis/: README.md  base.py
agentscope/analysis/classification/: failure.py
agentscope/analysis/drift/: detector.py  fingerprint.py
agentscope/analysis/intelligence/: __init__.py  failure_clustering.py  quality_scorer.py  token_optimizer.py
agentscope/analysis/prompt/: detector.py
agentscope/collector/: README.md  service.py
agentscope/collector/api/: README.md  app.py  schemas.py
agentscope/collector/api/routes/: calls.py  events.py  health.py  intelligence.py  llm.py  tools.py
agentscope/collector/storage/: README.md  base.py  sqlite.py
agentscope/core/: README.md  config.py
agentscope/core/events/: README.md  base.py  llm_call.py  registry.py  tool_call.py
agentscope/core/pipeline/: README.md  handlers.py  pipeline.py
agentscope/interceptors/: README.md  base.py  patch.py  proxy.py
agentscope/interceptors/parsers/: README.md  anthropic.py  base.py  openai.py  registry.py
anjor/: __init__.py  cli.py  cli_runner.py  client.py  context.py  mcp.py  mcp_server.py  models.py
anjor-sdk/: README.md  package-lock.json  package.json  tsconfig.json
anjor-sdk/src/: index.ts  types.ts
anjor-sdk/src/__tests__/: index.test.ts
anjor/analysis/: README.md  advisor.py  base.py  cost.py  report.py  summarizer.py
anjor/analysis/classification/: failure.py
anjor/analysis/context/: hog_detector.py  tracker.py
anjor/analysis/drift/: detector.py  fingerprint.py
anjor/analysis/intelligence/: __init__.py  failure_clustering.py  quality_scorer.py  root_cause.py  token_optimizer.py
anjor/analysis/tracing/: attribution.py  graph.py
anjor/collector/: README.md  service.py
anjor/collector/api/: README.md  app.py  middleware.py  schemas.py
anjor/collector/api/routes/: calls.py  events.py  health.py  intelligence.py  llm.py  mcp.py  projects.py  sessions.py  tools.py  traces.py
anjor/collector/export/: otlp.py
anjor/collector/storage/: README.md  __init__.py  base.py  sqlite.py
anjor/collector/storage/migrations/: 001_initial.sql  002_llm_calls.sql  003_agent_spans.sql  004_cache_write.sql  005_source_column.sql  006_project_column.sql  007_session_messages.sql  008_session_metadata.sql  009_baselines.sql  010_session_summaries.sql
anjor/core/: README.md  config.py
anjor/core/events/: README.md  agent_span.py  base.py  llm_call.py  message.py  registry.py  tool_call.py
anjor/core/pipeline/: README.md  handlers.py  pipeline.py
anjor/dashboard/static/: alerts.html  calls.html  index.html  intelligence.html  llm.html  llm_trace.html  mcp.html  projects.html  replay.html  tool_detail.html  tools.html  traces.html  utils.js
anjor/interceptors/: README.md  base.py  patch.py  proxy.py  requests_patch.py  streaming.py  traceparent.py
anjor/interceptors/parsers/: README.md  anthropic.py  base.py  gemini.py  openai.py  registry.py
anjor/watchers/: __init__.py  antigravity.py  base.py  claude.py  codex.py  gemini.py  manager.py  registry.py
dashboard/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/app/alerts/: page.tsx
dashboard/app/calls/: page.tsx
dashboard/app/intelligence/: page.tsx
dashboard/app/llm/: page.tsx
dashboard/app/llm/trace/[id]/: page.tsx
dashboard/app/tools/: page.tsx
dashboard/app/tools/[name]/: page.tsx
dashboard/lib/: api.ts
docs/: alerting.md  api-reference.md  architecture.md  cli-reference.md  code_flow.md  configuration.md  installation.md  intelligence.md  providers.md  quickstart.md  sdk.md
scripts/: check_no_internal_files.sh  demo_data.py  dev_setup.sh  start_collector.py  start_dashboard.sh
tests/: conftest.py
tests/e2e/: test_agent_instrumented.py
tests/integration/: test_cli_db_helpers.py  test_flush_endpoint.py  test_full_tool_call_flow.py  test_gemini_flow.py  test_intelligence_flow.py  test_llm_call_flow.py  test_openai_flow.py  test_patch_to_collector.py  test_span_storage.py  test_streaming_flow.py
tests/unit/: test_cli.py  test_cli_runner.py  test_client.py  test_context.py  test_mcp_names.py  test_mcp_server.py  test_public_api.py
tests/unit/analysis/: test_advisor.py  test_attribution.py  test_classification.py  test_context.py  test_diff_report.py  test_drift.py  test_fingerprint.py  test_intelligence.py  test_prompt.py  test_report.py  test_root_cause.py  test_summarizer.py  test_trace_graph.py
tests/unit/collector/: test_api.py  test_baselines.py  test_intelligence_api.py  test_mcp_storage.py  test_message_storage.py  test_otlp_export.py  test_prompt_versions.py  test_rate_limit.py  test_session_summary.py  test_sessions_api.py  test_storage.py  test_traces_api.py
tests/unit/core/: test_agent_span.py  test_alert_handler.py  test_config.py  test_events.py  test_pipeline.py
tests/unit/interceptors/: test_gemini_parser.py  test_openai_parser.py  test_parsers.py  test_patch.py  test_requests_patch.py  test_streaming.py  test_traceparent.py
tests/watchers/: test_base.py  test_claude_watcher.py  test_codex_watcher.py  test_gemini_watcher.py  test_manager.py  test_registry.py  test_stubs.py
tests/watchers/fixtures/: claude_session.jsonl  gemini_session.json
