[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anjor"
version = "0.3.0"
description = "Observability and reliability platform for agentic AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Anjor Labs", email = "hello@anjor.dev" }]
keywords = ["observability", "llm", "agents", "tools", "monitoring", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "structlog>=24.0",
]

[project.urls]
Homepage = "https://github.com/anjor-labs/anjor"
Repository = "https://github.com/anjor-labs/anjor"
Issues = "https://github.com/anjor-labs/anjor/issues"
Changelog = "https://github.com/anjor-labs/anjor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
proxy = ["mitmproxy>=10.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["anjor*"]

[tool.setuptools.package-data]
anjor = ["py.typed", "collector/storage/migrations/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "N"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["anjor"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
