[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anjor"
version = "1.0.0"
description = "Observability and reliability platform for agentic AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Anjor Labs" }]
keywords = ["observability", "llm", "agents", "tools", "monitoring", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "structlog>=24.0",
]

[project.scripts]
anjor = "anjor.cli:main"

[project.urls]
Homepage = "https://github.com/anjor-labs/anjor"
Repository = "https://github.com/anjor-labs/anjor"
Issues = "https://github.com/anjor-labs/anjor/issues"
Discussions = "https://github.com/anjor-labs/anjor/discussions"
Changelog = "https://github.com/anjor-labs/anjor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
proxy = ["mitmproxy>=10.0"]
mcp   = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "respx>=0.21",
    "requests>=2.31",
    "types-requests>=2.31",
    "ruff==0.15.10",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["anjor*"]

[tool.setuptools.package-data]
anjor = ["py.typed", "collector/storage/migrations/*.sql", "dashboard/static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "N"]
ignore = ["S101", "S603"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "E501", "S108", "I001"]
"tests/**/test_cli_runner.py" = ["S104"]
"scripts/demo_data.py" = ["S311", "E501", "B904"]
# E402 fires on imports that follow pytest.importorskip() — this is intentional.
"tests/**/test_requests_patch.py" = ["E402"]
"scripts/start_collector.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anjor.interceptors.requests_patch"
warn_unused_ignores = false

[tool.coverage.run]
source = ["anjor"]
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
